# balance_robot_algorithm

./: README.md
teeterbot_controller/: CMakeLists.txt  README.md  package.xml
teeterbot_controller/include/teeterbot_controller/: nmpc_cartpole.h
teeterbot_controller/launch/: teeterbot_controller.launch
teeterbot_controller/matlab/lmpc/: MPC_Matrices.m  Prediction.m  main_cartpole.m
teeterbot_controller/matlab/lqr/: teeterbot_lqr.m
teeterbot_controller/src/: MPC_Matrices.cpp  MPC_Matrices.h  nmpc_cartpole.cpp  rtwtypes.h  teeterbot_controller_lmpc.cpp  teeterbot_controller_lqr.cpp  teeterbot_controller_nmpc.cpp  teeterbot_keyboard_input.cpp
teeterbot_controller/src/MPC_Prediction/: CMakeLists.txt  MPC_Prediction.cpp  MPC_Prediction.h  MPC_Prediction_data.h  MPC_Prediction_initialize.cpp  MPC_Prediction_initialize.h  MPC_Prediction_internal_types.h  MPC_Prediction_rtwutil.cpp  MPC_Prediction_rtwutil.h  MPC_Prediction_terminate.cpp  MPC_Prediction_terminate.h  MPC_Prediction_types.h  PresolveWorkingSet.cpp  PresolveWorkingSet.h  RemoveDependentIneq_.cpp  RemoveDependentIneq_.h  addBoundToActiveSetMatrix_.cpp  addBoundToActiveSetMatrix_.h  buildInfo.mat  checkStoppingAndUpdateFval.cpp  checkStoppingAndUpdateFval.h  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  computeFirstOrderOpt.cpp  computeFirstOrderOpt.h  computeFval.cpp  computeFval.h  computeFval_ReuseHx.cpp  computeFval_ReuseHx.h  computeGrad_StoreHx.cpp  computeGrad_StoreHx.h  computeQ_.cpp  computeQ_.h  compute_deltax.cpp  compute_deltax.h  compute_lambda.cpp  compute_lambda.h  countsort.cpp  countsort.h  (+37 more)
teeterbot_controller/src/MPC_Prediction/examples/: main.cpp  main.h
teeterbot_controller/src/MPC_Prediction/html/: report.mldatx
teeterbot_controller/src/MPC_Prediction/interface/: _coder_MPC_Prediction_api.cpp  _coder_MPC_Prediction_api.h  _coder_MPC_Prediction_info.cpp  _coder_MPC_Prediction_info.h  _coder_MPC_Prediction_mex.cpp  _coder_MPC_Prediction_mex.h
teeterbot_gazebo/launch/: teeterbot_empty_world.launch  teeterbot_robot.launch
